syntax = "proto3";
package transformer;

service Transformer {
    rpc BasicRequest (RequestObject) returns (ResponseObject);
    rpc RequestStream (stream RequestObject) returns (ResponseObject);
    rpc ResponseStream (RequestObject) returns (stream ResponseObject);
    rpc Bidirectional (stream RequestObject) returns (stream ResponseObject);
}

enum SCOPE {
    REVIEWER = 0;
    DEVELOPER = 1;
    AUDITOR = 2;
}

message RequestObject {
    string id = 1;
    SCOPE scope = 3;
}

message ResponseObject {
    string id = 1;
}
